[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/prefabs/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/prefabs/prop/Lever.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Rooms/RoomGenericTutorial.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/prefabs/prop/Sink.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/prefabs/prop/FluidContainerGreen.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/prefabs/prop/FluidContainerPink.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/prop/Levers/LeverLine.gd" type="Script" id=7]
[ext_resource path="res://src/prop/Sink.gd" type="Script" id=8]

[node name="Room" instance=ExtResource( 3 )]
closed = false

[node name="Player" parent="Objects" index="0" instance=ExtResource( 1 )]
position = Vector2( 618, 365 )

[node name="Sink" parent="Objects" index="1" instance=ExtResource( 4 )]
position = Vector2( -6, 50 )
script = ExtResource( 8 )

[node name="Lever" parent="Objects" index="2" instance=ExtResource( 2 )]
position = Vector2( -2, 364 )

[node name="FluidContainerPink" parent="Objects" index="3" instance=ExtResource( 6 )]
position = Vector2( -637, -256 )

[node name="FluidContainerGreen" parent="Objects" index="4" instance=ExtResource( 5 )]
position = Vector2( 605, -219 )

[node name="PinkLine" type="Line2D" parent="Objects" index="5"]
z_index = -1
points = PoolVector2Array( -640, -266.733, -640, -2, -87, -2 )
default_color = Color( 0.482353, 0.482353, 0.482353, 1 )

[node name="GreenLine" type="Line2D" parent="Objects" index="6"]
z_index = -1
points = PoolVector2Array( 605, -273.514, 605, 4, 97, 4 )
default_color = Color( 0.482353, 0.482353, 0.482353, 1 )

[node name="LeverPink" parent="Objects" index="7" instance=ExtResource( 2 )]
position = Vector2( -495, -261 )
script = ExtResource( 7 )
on_color = Color( 0.937255, 0.596078, 0.984314, 1 )
off_color = Color( 0.482353, 0.482353, 0.482353, 1 )
line_name = "Pink"

[node name="LeverGreen" parent="Objects" index="8" instance=ExtResource( 2 )]
position = Vector2( 459, -269 )
script = ExtResource( 7 )
on_color = Color( 0.588235, 0.976471, 0.862745, 1 )
off_color = Color( 0.482353, 0.482353, 0.482353, 1 )
line_name = "Green"

[node name="Camera2D" type="Camera2D" parent="." index="6"]
current = true

[connection signal="used" from="Objects/LeverPink" to="Objects/Sink" method="_on_Lever_used"]
[connection signal="used" from="Objects/LeverGreen" to="Objects/Sink" method="_on_Lever_used"]
